reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_additional_derives-3.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_rust_code :: < Test > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::basic::Test,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::basic::Test,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod basic {

                #[derive(Clone, Debug, serde::Deserialize, serde::Serialize)]
                pub struct Test {
                    pub us: std::collections::BTreeSet<
                        super::super::super::reflectapi_demo::tests::basic::U,
                    >,
                    pub xs: std::collections::BTreeSet<
                        super::super::super::reflectapi_demo::tests::basic::X,
                    >,
                    pub ys: std::collections::HashSet<
                        super::super::super::reflectapi_demo::tests::basic::Y,
                    >,
                }

                #[derive(
                    Clone,
                    Debug,
                    Default,
                    Eq,
                    Hash,
                    Ord,
                    PartialEq,
                    PartialOrd,
                    serde::Deserialize,
                    serde::Serialize,
                )]
                pub struct U;

                #[derive(
                    Clone,
                    Debug,
                    Eq,
                    Hash,
                    Ord,
                    PartialEq,
                    PartialOrd,
                    serde::Deserialize,
                    serde::Serialize,
                )]
                pub struct X {}

                #[derive(
                    Clone,
                    Debug,
                    Eq,
                    Hash,
                    Ord,
                    PartialEq,
                    PartialOrd,
                    serde::Deserialize,
                    serde::Serialize,
                )]
                pub enum Y {
                    Y,
                }
            }
        }
    }
}
